cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(3D\ Algorithms)
find_package(PCL REQUIRED)
find_package(OpenCV REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
include_directories(${OpenCV_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(CloudProcessing main.cpp CloudHandler.cpp CloudHandler.h)
target_link_libraries(CloudProcessing ${PCL_LIBRARIES})
target_link_libraries(CloudProcessing ${OpenCV_LIBS})
